openapi with keycloak, roles, error catching, responses, etc