@@ -2,7 +2,7 @@ plugins {
     id 'java'
 	id 'org.springframework.boot' version '3.2.1'
 	id 'io.spring.dependency-management' version '1.1.4'
-//     id 'org.graalvm.buildtools.native' version '0.9.28'
+    id 'org.graalvm.buildtools.native' version '0.9.28'
 }
 
 group = 'com.jo'
@@ -12,14 +12,6 @@ java {
 	sourceCompatibility = '21'
 	targetCompatibility = '21'
 }
-
-/* graalvmNative {
-    binaries {
-        main {
-            buildArgs.add('--enable-preview')
-        }
-    }
-} */
 
 jar {
     enabled = false
@@ -49,7 +41,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-//     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 //     implementation 'org.springframework.boot:spring-boot-docker-compose'
     implementation 'org.springframework.boot:spring-boot-devtools'
     implementation "org.springframework.data:spring-data-envers:${enversVersion}"
